fix z-index and overflow issues

--- a/styles.css
+++ b/styles.css
@@ -52,7 +52,7 @@ header {
     height: 100%;
     /* flex-grow: 1; */
     background-color: #acedff;
-
+    overflow: hidden;
 }
 
 .main-container.cards-bg {
@@ -435,7 +435,7 @@ img#qr-code {
     margin-top: 10px;
 }
 
-.section-container {
+.section-container.form {
     z-index: 10;
     overflow: auto;
 }
